--- a/index.html
+++ b/index.html
@@ -4,32 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Fade Out Animation</title>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
 </head>
-
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="styles.css">
 <body>
 
-<div class="w3-content w3-section" style="max-width:500px">
-    <p>Spining around....... in circles...she's crying again.....but her teardrops won't go in vain...... leaving aside... her pain......... cause she knows that her love might........ see her again.
-    </p>
+<div class="slides"></div>
+<button id="myBtn" onclick="timedSlides()">Try it</button>
 
-    <img class="mySlides w3-animate-fading" src="1.jpg" style="width:100%">
-    <img class="mySlides w3-animate-fading" src="3.jpg" style="width:100%">
-    <img class="mySlides w3-animate-fading" src="2.jpg" style="width:100%">
-    <img class="mySlides w3-animate-fading" src="4.jpg" style="width:100%">
+<p id="demo">Press click to begin.....the story.</p>
 
-    <audio controls>
-        <source src="She-distort into me.mp3" type="audio/mp3">
-    </audio>
 </div>
 
-
-
-<script src="script.js"></script>
-
+<audio id="myAudio">
+    <source src="Assets/music/She-distort into me trimmed.mp3" type="audio/mpeg">
+</audio>
 
     
 </body>
+
+<script src="script.js"></script>
 </html>
