--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <link rel="stylesheet" href="styles.css">
 <body>
 
-<div class="slides"></div>
-<button id="myBtn" onclick="timedSlides()">Try it</button>
+<div class="wrapper">
+    <div class="slides"></div>
+        <button id="myBtn" onclick="timedSlides()">Try it</button>
 
-<p id="demo">Press click to begin.....the story.</p>
+        <p id="demo">Press click to begin.....the story.</p>
 
+    </div>
 </div>
 
 <audio id="myAudio">
